# hinge-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE.md  Makefile  README.md  alembic.ini  app.py  config.py  hinge_client.py  hinge_enums.py  hinge_error.py  hinge_models.py  hinge_prompts_manager.py  logging_config.py  pyproject.toml  requirements.txt  ui_components.py  utils.py
.github/: RELEASE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
migrations/: env.py
migrations/versions/: 0001_add_hinge_tables.py  0002_add_hinge_chat_tables.py  0003_add_hinge_prompts_table.py
pages/: 1_Recommendations.py  recommendations.py
src/hinge/: __init__.py  bootstrap.py  client.py  enums.py  error.py  main.py  models.py  prompts_manager.py
src/hinge/api/: __init__.py  analytics.py  auth.py  chat.py  deps.py  error_handlers.py  likes.py  matches.py  preferences.py  profile.py  recommendations.py  router.py  schemas.py  websocket.py
src/hinge/application/: __init__.py
src/hinge/application/services/: __init__.py  chat_sync_service.py  rejection_scan.py  rejection_scheduler.py  sendbird_ws.py
src/hinge/client/: __init__.py  _core.py
src/hinge/client/resources/: __init__.py  _base.py  chat.py  content.py  profile.py  prompts.py  rating.py  recommendations.py
src/hinge/core/: catalog.py  config.py  logging.py  logging_config.py
src/hinge/data/: catalog.json
src/hinge/domain/: __init__.py  enums.py
src/hinge/domain/models/: __init__.py  chat_channel.py  chat_message.py  decision.py  like_limit.py  match.py  profile.py  prompt.py  recommendation.py  swipe_session.py
src/hinge/domain/ports/: __init__.py  chat_repo.py  decision_repo.py  hinge_api_port.py  profile_repo.py  prompts_repo.py  scorer_port.py  session_repo.py  unit_of_work.py
src/hinge/infrastructure/: __init__.py
src/hinge/infrastructure/db/: __init__.py  metadata.py  session.py  types.py  unit_of_work.py
src/hinge/infrastructure/db/mappers/: __init__.py
src/hinge/infrastructure/db/repositories/: __init__.py  chat_repo.py  decision_repo.py  profile_repo.py  prompts_repo.py  session_repo.py
src/hinge/infrastructure/db/tables/: __init__.py  chat_channel.py  chat_message.py  decision.py  profile.py  prompt.py  scan_run.py  session.py
src/hinge/infrastructure/hinge/: __init__.py  adapter.py
src/hinge/infrastructure/scoring/: __init__.py  rule_based.py
src/hinge/models/: __init__.py  attributes.py  auth.py  base.py  content.py  preferences.py  profile.py  prompts.py  rating.py  recommendations.py  standouts.py
tests/: conftest.py  test_no_secrets.py
tests/contract/: test_fixtures_parse.py
tests/fixtures/: like_limit.json  likes_you_response.json  preferences.json  prompts_response.json  recommendations_response.json  self_content_response.json  self_profile_response.json  standouts_v2_response.json  standouts_v3_response.json  user_profile.json  user_profile_v2.json
tests/hinge/: __init__.py  conftest.py  test_adapter_chat.py  test_chat_repo.py  test_chat_routes.py  test_chat_sync_service.py  test_repos.py  test_routes_smoke.py
tests/integration/: test_integration.py
tests/property/: test_property.py
tests/unit/: test_catalog.py  test_chat.py  test_client_auth.py  test_client_sessions.py  test_content.py  test_enums.py  test_error.py  test_logging.py  test_models.py  test_profile.py  test_prompts.py  test_prompts_manager.py  test_rating.py  test_recommendations.py
