[project]
name = "hinge"
version = "0.1.0"
description = "Typed async client for the Hinge dating-app API."
authors = [
    { name = "Bryan", email = "bryan.tran053@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "structlog>=25.5.0",
    "websockets>=16.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src", "tests"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    "node_modules",
    ".ruff_cache",
]

[tool.ruff.lint]
select = ["E", "F", "C", "D", "B", "I", "Q"]
ignore = [
    "E203",  # whitespace before ':' (conflicts with formatter)
    "D203",
    "D213",
    "I001",
]
fixable = ["E", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"src/hinge/__init__.py" = ["D104"]

[tool.coverage.run]
branch = true
source = ["src/hinge"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that hit real Hinge or Sendbird APIs",
]

[dependency-groups]
dev = [
    "hypothesis>=6.155.7",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.12",
    "ty>=0.0.55",
]
