[project]
name = "hinge-client"
dynamic = ["version"]
description = "Typed async client for the Hinge dating-app API."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    { name = "Bryan", email = "bryan.tran053@gmail.com" },
]
keywords = ["hinge", "dating", "api-client", "async", "httpx", "sendbird"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "structlog>=26.1.0",
    "websockets>=16.0",
]

[project.urls]
Homepage = "https://github.com/Stupidoodle/hinge-client"
Repository = "https://github.com/Stupidoodle/hinge-client"
Issues = "https://github.com/Stupidoodle/hinge-client/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/hinge"]

[tool.hatch.build.targets.sdist]
include = [
    "src/hinge",
    "README.md",
    "LICENSE.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src", "tests"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    "node_modules",
    ".ruff_cache",
]

[tool.ruff.lint]
select = ["E", "F", "C", "D", "B", "I", "Q"]
ignore = [
    "E203",  # whitespace before ':' (conflicts with formatter)
    "D203",
    "D213",
    "I001",
]
fixable = ["E", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"src/hinge/__init__.py" = ["D104"]

[tool.coverage.run]
branch = true
source = ["src/hinge"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that hit real Hinge or Sendbird APIs",
]

[dependency-groups]
dev = [
    "hypothesis>=6.155.7",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.20",
    "twine>=6.2.0",
    "ty>=0.0.55",
]
